# deepdisc

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  calexp-HSC-G-9814-6,6_scarlet.fits  ci-environment.yml  deepdisc-env-nobuilds.yml  demo.ipynb  demo_decam.ipynb  demo_hsc.ipynb  environment.yml  format_decam_data.ipynb  format_decam_json.py  format_hsc_data.ipynb  preprocess.ipynb  pyproject.toml  scarlet_tests.ipynb  scarlet_update.py  setup.py  solo_test_run_transformers.py  test_eval_model.py  test_eval_model_DC2.py  test_eval_model_DC2_redshift.py  test_run_transformers.py  test_run_transformers_DC2.py  test_run_transformers_DC2_redshift.py  train_decam.py  train_decam_copy.py  train_decam_testmodel.py  train_hsc.py  train_hsc_copy.py  train_hsc_noclass.py  train_hsc_primary.py  train_hsc_primary_testmodel.py  train_hsc_primary_transformers.py  training_data.ipynb  wonky_ex.txt
.github/: linting.yml
.github/workflows/: build-documentation.yml  linting.yml  pre-commit-ci.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
.ipynb_checkpoints/: format_decam_data-checkpoint.ipynb  format_hsc_data-checkpoint.ipynb  scarlet_tests-checkpoint.ipynb  training_data-checkpoint.ipynb
astrodet/: DC2_public.py  astrodet.py  detectron.py  hsc.py  scarlet.py  scarlet_catalog.py  scarlet_nocatalog.py  scarlet_update.py  scarlet_update_new.py  scarlet_update_test.py  visualizer.py
docs/: conf.py  index.rst  notebooks.rst
docs/notebooks/: configs.ipynb  data_loading.ipynb  predictions.ipynb  training.ipynb
raw_HSC_data/hsc/: tracts_patches_DUD-XMM-LSS.txt  tracts_patches_UD-COSMOS.txt
solo_run_scripts/: solo_test_eval_model.py  solo_test_run_transformers.py  solo_test_run_transformers_DC2.py  solo_test_run_transformers_DC2_redshift.py
src/deepdisc/astrodet/: DC2_public.py  astrodet.py  detectron.py  hsc.py  scarlet_catalog.py  scarlet_nocatalog.py  visualizer.py
src/deepdisc/data_format/: augment_image.py  conversions.py  file_io.py  flatten.py  image_readers.py  register_data.py
src/deepdisc/inference/: match_objects.py  predictors.py
src/deepdisc/model/: lazy_trainer.py  loaders.py  models.py  trainers.py
src/deepdisc/preprocessing/: detection.py  get_data.py  ground_truth_gen.py  process.py
src/deepdisc/training/: trainers.py
src/deepdisc/utils/: parse_arguments.py
tests/: test_flatten_data.py
tests/deepdisc/: conftest.py
tests/deepdisc/data_format/: test_augment_image.py  test_file_io.py  test_flatten_data.py  (+2 more)
(+27 files in other folders)
